[gd_scene load_steps=59 format=3 uid="uid://6lu8fikb4kl2"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_nlx6r"]
[ext_resource type="Texture2D" uid="uid://dl2plghi0koa5" path="res://assets/sprites/chasis.png" id="1_t5hw6"]
[ext_resource type="Texture2D" uid="uid://cu6446oko8yy" path="res://assets/sprites/gun.png" id="2_njt20"]
[ext_resource type="Texture2D" uid="uid://dhwlr2pl4avv0" path="res://assets/sprites/chasis2.png" id="3_ky8tx"]
[ext_resource type="Texture2D" uid="uid://bqavmlhic27f0" path="res://assets/sprites/leg.png" id="3_rw7xu"]
[ext_resource type="Texture2D" uid="uid://dscikkoyoss7h" path="res://assets/sprites/charge.png" id="5_3h1ym"]
[ext_resource type="Texture2D" uid="uid://nv2uhtlg8tg2" path="res://assets/sprites/ball.png" id="6_dpy0p"]
[ext_resource type="Texture2D" uid="uid://beo2h0pjlaskx" path="res://assets/sprites/thrower.png" id="7_3eqou"]
[ext_resource type="Texture2D" uid="uid://b7ust0b4spb51" path="res://assets/sprites/fire.png" id="8_dcrug"]
[ext_resource type="PackedScene" uid="uid://rfbyft7n22d3" path="res://scenes/fire.tscn" id="10_mtk4m"]
[ext_resource type="AudioStream" uid="uid://bb7m04cracma" path="res://assets/sfx/gun_shoot.wav" id="11_m63rq"]
[ext_resource type="AudioStream" uid="uid://qfvjijkuhkog" path="res://assets/sfx/charge_hold.wav" id="12_m63hb"]
[ext_resource type="AudioStream" uid="uid://d8d800l2ijr5" path="res://assets/sfx/thrower_shot.wav" id="13_dh5nx"]
[ext_resource type="AudioStream" uid="uid://dv8an3bpomajv" path="res://assets/sfx/charge_shoot.wav" id="13_o5dh0"]
[ext_resource type="AudioStream" uid="uid://bfkg8o3d8k08p" path="res://assets/sfx/jump.wav" id="15_i4kvs"]
[ext_resource type="AudioStream" uid="uid://b4vneu7fimpcv" path="res://assets/sfx/hurt.wav" id="15_k0j6r"]
[ext_resource type="AudioStream" uid="uid://c14ptinuupaol" path="res://assets/sfx/player_death.wav" id="17_otlg0"]
[ext_resource type="Texture2D" uid="uid://dq8hh8psu42vh" path="res://assets/sprites/explosion.png" id="18_s1df1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kq3ua"]
atlas = ExtResource("3_ky8tx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_yje5t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq3ua")
}],
"loop": false,
"name": &"chasis2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_t5hw6")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_jdyoy"]
atlas = ExtResource("2_njt20")
region = Rect2(0, 0, 30, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7p7m"]
atlas = ExtResource("2_njt20")
region = Rect2(30, 0, 30, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_7njro"]
atlas = ExtResource("2_njt20")
region = Rect2(60, 0, 30, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsojf"]
atlas = ExtResource("2_njt20")
region = Rect2(90, 0, 30, 14)

[sub_resource type="SpriteFrames" id="SpriteFrames_16k8k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdyoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7p7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7njro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsojf")
}],
"loop": false,
"name": &"shoot",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_xei15"]
atlas = ExtResource("5_3h1ym")
region = Rect2(0, 0, 30, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ma1xk"]
atlas = ExtResource("5_3h1ym")
region = Rect2(30, 0, 30, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eh0d8"]
atlas = ExtResource("5_3h1ym")
region = Rect2(60, 0, 30, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_erl88"]
atlas = ExtResource("5_3h1ym")
region = Rect2(90, 0, 30, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_uui1x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xei15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ma1xk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eh0d8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_erl88")
}],
"loop": false,
"name": &"shoot",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_x71ul"]
atlas = ExtResource("7_3eqou")
region = Rect2(0, 0, 30, 14)

[sub_resource type="SpriteFrames" id="SpriteFrames_a0yso"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x71ul")
}],
"loop": false,
"name": &"shoot",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_lq6pg"]
atlas = ExtResource("8_dcrug")
region = Rect2(0, 0, 96, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ts73w"]
atlas = ExtResource("8_dcrug")
region = Rect2(96, 0, 96, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_3q2dy"]
atlas = ExtResource("8_dcrug")
region = Rect2(192, 0, 96, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7toh"]
atlas = ExtResource("8_dcrug")
region = Rect2(288, 0, 96, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_7sfiw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lq6pg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ts73w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3q2dy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7toh")
}],
"loop": true,
"name": &"fire",
"speed": 9.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_jqfqe"]
atlas = ExtResource("3_rw7xu")
region = Rect2(64, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_d40c4"]
atlas = ExtResource("3_rw7xu")
region = Rect2(64, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1vie"]
atlas = ExtResource("3_rw7xu")
region = Rect2(96, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxh4v"]
atlas = ExtResource("3_rw7xu")
region = Rect2(96, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4w0t"]
atlas = ExtResource("3_rw7xu")
region = Rect2(0, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7rf8"]
atlas = ExtResource("3_rw7xu")
region = Rect2(32, 0, 32, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_omj2c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqfqe")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d40c4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1vie")
}],
"loop": false,
"name": &"jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqfqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxh4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4w0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7rf8")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_djvpe"]
atlas = ExtResource("3_rw7xu")
region = Rect2(32, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvc85"]
atlas = ExtResource("3_rw7xu")
region = Rect2(32, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_qoec4"]
atlas = ExtResource("3_rw7xu")
region = Rect2(0, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlwh6"]
atlas = ExtResource("3_rw7xu")
region = Rect2(0, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvkhc"]
atlas = ExtResource("3_rw7xu")
region = Rect2(32, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxuup"]
atlas = ExtResource("3_rw7xu")
region = Rect2(64, 0, 32, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_8a4yx"]
atlas = ExtResource("3_rw7xu")
region = Rect2(96, 0, 32, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_12m68"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_djvpe")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvc85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qoec4")
}],
"loop": false,
"name": &"jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlwh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvkhc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxuup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a4yx")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qyyyd"]
radius = 16.0
height = 58.0

[sub_resource type="AtlasTexture" id="AtlasTexture_nlly5"]
atlas = ExtResource("18_s1df1")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcivd"]
atlas = ExtResource("18_s1df1")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4w467"]
atlas = ExtResource("18_s1df1")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfqxb"]
atlas = ExtResource("18_s1df1")
region = Rect2(288, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_n8w0b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlly5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcivd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w467")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfqxb")
}],
"loop": false,
"name": &"default",
"speed": 12.0
}]

[node name="Player" type="CharacterBody2D"]
z_index = 3
collision_layer = 2
collision_mask = 9
script = ExtResource("1_nlx6r")
SPEED = 150
JUMP = 400
GUN_COOLDOWN = 0.2
CHARGE_POWERUP = 2.0
DAMAGE_IMMUNITY = 0.1

[node name="ChasisSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yje5t")
animation = &"chasis2"

[node name="GunSprite" type="AnimatedSprite2D" parent="ChasisSprite"]
position = Vector2(-9.5, -1.5)
sprite_frames = SubResource("SpriteFrames_16k8k")
animation = &"shoot"
offset = Vector2(11.5, 3.5)

[node name="GunTip" type="Marker2D" parent="ChasisSprite/GunSprite"]
position = Vector2(26.5, 7)

[node name="ChargeSprite" type="AnimatedSprite2D" parent="ChasisSprite"]
visible = false
position = Vector2(-9.5, -1.5)
sprite_frames = SubResource("SpriteFrames_uui1x")
animation = &"shoot"
frame = 3
frame_progress = 1.0
offset = Vector2(11.5, 4.5)

[node name="ChargeTip" type="Marker2D" parent="ChasisSprite/ChargeSprite"]
position = Vector2(24, 7)

[node name="BallSprite" type="Sprite2D" parent="ChasisSprite/ChargeSprite"]
visible = false
z_index = 2
z_as_relative = false
position = Vector2(24, 7)
texture = ExtResource("6_dpy0p")

[node name="ThrowerSprite" type="AnimatedSprite2D" parent="ChasisSprite"]
visible = false
position = Vector2(-9.5, -1.5)
sprite_frames = SubResource("SpriteFrames_a0yso")
animation = &"shoot"
offset = Vector2(11.5, 3.5)

[node name="ThrowerTip" type="Marker2D" parent="ChasisSprite/ThrowerSprite"]
position = Vector2(26.5, 7)

[node name="FireSprite" type="AnimatedSprite2D" parent="ChasisSprite/ThrowerSprite"]
visible = false
z_index = 2
z_as_relative = false
position = Vector2(26.5, 7)
sprite_frames = SubResource("SpriteFrames_7sfiw")
animation = &"fire"
autoplay = "fire"
offset = Vector2(48, 1.5)

[node name="FireRayCast" type="RayCast2D" parent="ChasisSprite/ThrowerSprite"]
position = Vector2(26.5, 7)
target_position = Vector2(96, 0)
hit_from_inside = true

[node name="Fire" parent="ChasisSprite/ThrowerSprite" instance=ExtResource("10_mtk4m")]
position = Vector2(26.5, 7)

[node name="BackLegSprite" type="AnimatedSprite2D" parent="ChasisSprite"]
position = Vector2(-4.5, 10.5)
sprite_frames = SubResource("SpriteFrames_omj2c")
animation = &"jump"
autoplay = "idle"
offset = Vector2(3.5, 14.5)

[node name="FrontLegSprite" type="AnimatedSprite2D" parent="ChasisSprite"]
position = Vector2(-4.5, 10.5)
sprite_frames = SubResource("SpriteFrames_12m68")
animation = &"jump"
autoplay = "idle"
offset = Vector2(3.5, 14.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 14)
shape = SubResource("CapsuleShape2D_qyyyd")

[node name="Timers" type="Node" parent="."]

[node name="GunCoolDown" type="Timer" parent="Timers"]
one_shot = true

[node name="ChargePowerUp" type="Timer" parent="Timers"]
one_shot = true

[node name="DamageImmunity" type="Timer" parent="Timers"]
one_shot = true

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="GunShoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_m63rq")
volume_db = 5.0
bus = &"Active SFX"

[node name="ChargeHold" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_m63hb")
pitch_scale = 0.5
bus = &"Passive SFX"

[node name="ChargeShoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_o5dh0")
bus = &"Active SFX"

[node name="FireShoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_dh5nx")
bus = &"Active SFX"

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_i4kvs")
bus = &"Passive SFX"

[node name="Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_k0j6r")
bus = &"Active SFX"

[node name="Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_otlg0")
bus = &"Active SFX"

[node name="ExplosionSprite" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_n8w0b")
frame = 3
frame_progress = 1.0

[connection signal="timeout" from="Timers/DamageImmunity" to="." method="_on_damage_immunity_timeout"]
[connection signal="animation_finished" from="ExplosionSprite" to="." method="_on_animated_sprite_2d_animation_finished"]
